# catalyst-finance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTE.md  README.md  app.db  app.py  catalyst_finance_manifest.json  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py
catalyst_finance/: __init__.py  api.py  calculation.py  cashflow.py  cashflow_cli.py  cashflow_migration.py  cashflow_models.py  cli.py  comparison.py  comparison_cli.py  comparison_migration.py  comparison_models.py  domain.py  elasticity.py  engine.py  governance.py  governance_cli.py  governance_migration.py  governance_models.py  interpretation.py  io.py  migration.py  models.py  narrative.py  operating.py  operating_cli.py  operating_migration.py  operating_models.py  platform.py  platform_cli.py  platform_migration.py  platform_models.py  pricing.py  pricing_cli.py  pricing_migration.py  pricing_models.py  registry.py  repositories.py  serve.py  sustainable.py  (+13 more)
data/: irregular_cash_flow_scenario.json  legacy_v1.0.0_scenario.json  legacy_v1.1.0_scenario.json  legacy_v1.2.0_scenario.json  legacy_v1.3.0_scenario.json  legacy_v1.5.0_cash_flow_scenario.json  legacy_v1.5.0_comparison.json  legacy_v1.5.0_scenario.json  legacy_v1.5.0_uncertainty.json  legacy_v1.6.0_cash_flow_scenario.json  legacy_v1.6.0_uncertainty.json  legacy_v1.7.0_cash_flow_scenario.json  legacy_v1.7.0_comparison.json  legacy_v1.7.0_operating.json  legacy_v1.7.0_sustainable.json  legacy_v1.7.0_uncertainty.json  legacy_v1.7.0_workspace.export.json  legacy_v1.8.0_comparison.json  legacy_v1.8.0_governance.json  legacy_v1.8.0_sustainable.json  legacy_v1.8.0_uncertainty.json  legacy_v1.8.0_workspace.export.json  legacy_v1.9.0_governance.json  legacy_v1.9.0_operating.json  legacy_v1.9.0_platform.json  legacy_v1.9.0_scenario.json  legacy_v1.9.0_sustainable.json  multiple_sign_cash_flow_scenario.json  negative_cash_flow_scenario.json  sample_cash_flow_scenario.json  sample_comparison.json  sample_finance_scenario.json  sample_governance.json  sample_operating.json  sample_platform.json  sample_pricing.json  sample_sustainable.json  sample_uncertainty.json  zero_cost_cash_flow_scenario.json
docs/: capital-budgeting-review-checklist.md  cash-flow-modeling.md  comparison-review-checklist.md  connected-financial-decision-intelligence-platform.md  evidence-review-governance-publication.md  export-spec.md  governance-review-checklist.md  methodology.md  migration-v1.0.0.md  operating-economics.md  operating-review-checklist.md  platform-integration-review-checklist.md  pricing-and-elasticity.md  pricing-review-checklist.md  repository-architecture.md  review-checklist.md  scenario-comparison.md  sustainable-finance-and-natural-capital.md  sustainable-finance-review-checklist.md  uncertainty-and-stress-testing.md  uncertainty-review-checklist.md  wordpress-plugin.md  workspaces.md
examples/: irregular_cash_flow_scenario.output.json  irregular_cash_flow_scenario.output.md  irregular_cash_flow_scenario.periods.csv  legacy_v1.0.0_scenario.migrated.output.json  legacy_v1.0.0_scenario.migrated.output.md  sample_comparison.output.csv  (+38 more)
(+121 files in other folders)
