[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst-finance"
version = "1.5.0"
description = "Transparent financial scenario and decision-support tools for Sustainable Catalyst."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Content Catalyst LLC" },
]
keywords = ["finance", "scenario-analysis", "sustainability", "decision-support"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8,<4"]
dev = [
  "httpx>=0.27,<1",
  "jsonschema>=4.22,<5",
  "mypy>=1.11,<2",
  "pytest>=8,<10",
  "ruff>=0.8,<1",
  "tomli>=2,<3; python_version < '3.11'",
]

[project.scripts]
catalyst-finance = "catalyst_finance.cli:main"
catalyst-finance-elasticity = "catalyst_finance.elasticity:main"
catalyst-finance-api = "catalyst_finance.serve:main"
catalyst-finance-workspace = "catalyst_finance.workspace_cli:main"
catalyst-finance-cashflow = "catalyst_finance.cashflow_cli:main"
catalyst-finance-compare = "catalyst_finance.comparison_cli:main"
catalyst-finance-uncertainty = "catalyst_finance.uncertainty_cli:main"

[project.urls]
Repository = "https://github.com/Content-Catalyst-LLC/catalyst-finance"

[tool.setuptools.packages.find]
include = ["catalyst_finance*"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
follow_imports = "skip"
ignore_missing_imports = true
disallow_untyped_decorators = false
files = [
  "catalyst_finance/__init__.py",
  "catalyst_finance/api.py",
  "catalyst_finance/cli.py",
  "catalyst_finance/calculation.py",
  "catalyst_finance/cashflow.py",
  "catalyst_finance/cashflow_cli.py",
  "catalyst_finance/cashflow_models.py",
  "catalyst_finance/domain.py",
  "catalyst_finance/engine.py",
  "catalyst_finance/interpretation.py",
  "catalyst_finance/io.py",
  "catalyst_finance/migration.py",
  "catalyst_finance/models.py",
  "catalyst_finance/narrative.py",
  "catalyst_finance/registry.py",
  "catalyst_finance/serve.py",
  "catalyst_finance/version.py",
  "catalyst_finance/repositories.py",
  "catalyst_finance/templates.py",
  "catalyst_finance/workspace.py",
  "catalyst_finance/workspace_cli.py",
  "catalyst_finance/workspace_models.py",
  "catalyst_finance/comparison.py",
  "catalyst_finance/comparison_cli.py",
  "catalyst_finance/comparison_models.py",
  "catalyst_finance/uncertainty.py",
  "catalyst_finance/uncertainty_cli.py",
  "catalyst_finance/uncertainty_models.py",
]
